# croo-trustbrief-agent

./: .gitignore  DEMO_SCRIPT.md  HACKATHON_SUBMISSION.md  LICENSE  README.md  pyproject.toml  requirements.txt  service_schema.json
docs/: rank1_strategy.md
examples/: sample_request.json
research/: experiment_journal.md
tests/: test_trustbrief.py
trustbrief_agent/: __init__.py  buyer_composability.py  cap_provider.py  cli.py  core.py  evidence_bundle.py  live_commerce_evidence.py  mock_cap_harness.py  openai_enhancer.py  requester_harness.py  submission_package.py
